// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Times 1`] = `
<div
  className="times"
>
  <span>
    Jan, 2012
  </span>
  <span>
    -
  </span>
  <span>
    Aug, 2012
  </span>
</div>
`;

exports[`renders Times with no end 1`] = `
<div
  className="times"
>
  <span>
    Jan, 2012
  </span>
  <span>
    -
  </span>
  <span>
    Present
  </span>
</div>
`;
